--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
-<body>
+<body class="teal">
     <div class="container">
         <div class="row">
             <div class="col s12">
