Modify index page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                 <div class="card teal darken-1">
                 <div class="card-content white-text">
                     <span id="authors" class="card-title"><b>Authors Haven</b></span>
-                    <p>Welcome to Authors Haven</p>
+                    <p>Welcome to Authors Haven. A Social platform for the creative at heart.</p>
                 </div>
                 <div class="card-action">
-                    <a href="#">Dashboard</a>
+                    <a href=login.htnml"">Login</a>
+                    <a href=login.htnml"">signup</a>
                 </div>
                 </div>
             </div>
