--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="card-action">
                     <a href=login.htnml"">Login</a>
-                    <a href=login.htnml"">signup</a>
+                    <a href=signup.htnml"">signup</a>
                 </div>
                 </div>
             </div>
