--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <p>Welcome to Authors Haven. A Social platform for the creative at heart.</p>
                 </div>
                 <div class="card-action">
-                    <a href=login.htnml"">Login</a>
-                    <a href=signup.htnml"">signup</a>
+                    <a href="login.htnm">Login</a>
+                    <a href="signup.htnml">signup</a>
                 </div>
                 </div>
             </div>
