Modify index page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
 </head>
 
 <body class="teal">
+<nav class="teal">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Authors Haven</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="login.html">login</a></li>
+        <li><a href="signup.html">Signup</a></li>
+      </ul>
+    </div>
+  </nav>
     <div class="container">
         <div class="row">
             <div class="col s12">
+            <span id="authors" class="card-title"><b>Authors Haven</b></span>
                 <div class="card teal darken-1">
                 <div class="card-content white-text">
-                    <span id="authors" class="card-title"><b>Authors Haven</b></span>
                     <p>Welcome to Authors Haven. A Social platform for the creative at heart.</p>
                 </div>
                 <div class="card-action">
