Add index and styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="teal">
-<nav class="teal">
+<nav class="teal row">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Authors Haven</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
