--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 
     <!--custom css-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ed-style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
-<body class="teal">
+<body class="">
 <nav class="teal row">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Authors Haven</a>
+      <a href="#" class="logo">Authors Haven</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="login.html">login</a></li>
-        <li><a href="signup.html">Signup</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="sign-up.html">Sign Up</a></li>
       </ul>
     </div>
   </nav>
     <div class="container">
         <div class="row">
             <div class="col s12">
-            <span id="authors" class="card-title"><b>Authors Haven</b></span>
                 <div class="card teal darken-1">
                 <div class="card-content white-text">
                     <p>Welcome to Authors Haven. A Social platform for the creative at heart.</p>
                 </div>
                 <div class="card-action">
-                    <a href="login.htnm">Login</a>
-                    <a href="signup.htnml">signup</a>
+                    <a href="login.html">Login</a>
+                    <a href="sign-up.html">Sign Up</a>
                 </div>
                 </div>
             </div>
