--- a/create_article.html
+++ b/create_article.html
@@ -24,7 +24,7 @@
                         <li><a href="#"><i  class="material-icons">search</i></a></li>
                         <li><a href="#"><i class="material-icons">bookmark_border</i></a></li>
                         <li><a href="#"><i class="material-icons">notifications_none</i></a></li>
-                        <li><a href="#" class="nav-image"><img src="static/img/avatar.png" alt="avatar"></a></li>
+                        <li><a href="profile.html" class="nav-image"><img src="static/img/avatar.png" alt="avatar"></a></li>
                     </ul>
                 </div>
             </nav>
