--- a/sign-up.html
+++ b/sign-up.html
@@ -75,7 +75,7 @@
                     return;
                 }
             }
-            window.location.href = 'https://google.com';
+            window.location.href = 'profile.html';
         }
     </script>
 </body>
