Add confirm message after signup

--- a/sign-up.html
+++ b/sign-up.html
@@ -75,7 +75,7 @@
                     return;
                 }
             }
-            window.location.href = 'profile.html';
+            window.location.href = 'confirm.html';
         }
     </script>
 </body>
