--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </form>
-                <p class="center-align"> <a href="/mockup/forgot_password.html" class="white-text">Create Account?</a></p>
+                <p class="center-align"> <a href="mockup/forgot_password.html" class="white-text">Create Account?</a></p>
             </div>
         </div>
     </div>
