--- a/sign-up.html
+++ b/sign-up.html
@@ -49,6 +49,14 @@
                             </div>
                         </div>
 
+                        <div class="row">
+                            <button type="button" onclick="relocate()" class="loginBtn loginBtn--facebook">
+                                Facebook
+                            </button>
+                            <button type="button" onclick="relocate()" class="loginBtn loginBtn--google">
+                                Google
+                              </button>
+                        </div>
 
                         <div class="card-action center-align">
                             <a onclick="submit()" class="waves-effect btn">Continue</a>
@@ -76,6 +84,9 @@
                 }
             }
             window.location.href = 'https://google.com';
+        }
+        function relocate() {
+            window.location.replace("profile.html");
         }
     </script>
 </body>
