--- a/login.html
+++ b/login.html
@@ -34,13 +34,13 @@
                                 <input id="password" type="password" class="validate"> <label for="password">Password</label>
                             </div>
                         </div>
-                        <p> <a href="/mockup/forgot_password.html" class="grey-text">Forgot Password?</a></p>
+                        <p> <a href="forgot_password.html" class="grey-text">Forgot Password?</a></p>
                         <div class="card-action center-align">
                             <a onclick="submit()" class="waves-effect btn">Sign In</a>
                         </div>
                     </div>
                 </form>
-                <p class="center-align"> <a href="mockup/forgot_password.html" class="white-text">Create Account?</a></p>
+                <p class="center-align"> <a href="forgot_password.html" class="white-text">Create Account?</a></p>
             </div>
         </div>
     </div>
