--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
-<body class="">
-<nav class="teal row">
+<body style="background-image: url('imgs/bg.jpg'); background-size: cover">
+<nav class="teal-text row white">
     <div class="nav-wrapper">
-      <a href="#" class="logo">Authors Haven</a>
+      <a href="#" class="logo teal-text" style="font-size: 35px; margin-left: 50px;">Authors Haven</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="login.html">Login</a></li>
-        <li><a href="sign-up.html">Sign Up</a></li>
+        <li><a class="black-text" href="login.html">Login</a></li>
+        <li><a class="black-text" href="sign-up.html">Sign Up</a></li>
       </ul>
     </div>
   </nav>
     <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <div class="card teal darken-1">
-                <div class="card-content white-text">
-                    <p>Welcome to Authors Haven. A Social platform for the creative at heart.</p>
+        <div class="row center-align">
+            <div class="col s8 offset-s2">
+                <div class="card" style="margin-top: 100px; background-color: rgba(0,0,0,0); box-shadow: none;">
+                <div class="card-content">
+                    <h4>Welcome to Authors Haven.</h4>
+                    <h5>A Social platform for the creative at heart.</h5>
                 </div>
                 <div class="card-action">
-                    <a href="login.html">Login</a>
-                    <a href="sign-up.html">Sign Up</a>
+                    <a class="waves-effect btn " href="login.html">Login</a>
+                    <a class="waves-effect btn" href="sign-up.html">Sign Up</a>
                 </div>
                 </div>
             </div>
