--- a/create_article.html
+++ b/create_article.html
@@ -62,6 +62,8 @@
                                 </form>
                         </div>
                 </div>
+                <a class="waves-effect waves-light btn">Save Article</a>
+                <a class="waves-effect waves-light btn red">Discard</a>
           </div>
         
         <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=ljfo4ulmt38of5v0jkkdcgtq82zcbi4bevecyv4wo43wu3nx"></script>
