--- a/edit_profile.html
+++ b/edit_profile.html
@@ -6,7 +6,7 @@
         <!--Import materialize.css-->
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link rel="stylesheet" href="../mock/static/css/style1.css">
+        <link rel="stylesheet" href="../static/css/style1.css">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Ramon | Author's Haven</title>
