--- a/profile.html
+++ b/profile.html
@@ -175,7 +175,7 @@
             
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="/static/js/script.js"></script>
+        <script src="static/js/script.js"></script>
     </body>
   </html>
 
