--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
                 </div>
                 <div id="following">
                     <a href="#"><strong style="color:#000;">15</strong> Followers</a>
-                    <a href="#"><strong style="color:#000;">1</strong> Followers</a>
+                    <a href="#"><strong style="color:#000;">1</strong> Following</a>
                 </div>
             </div>
             
@@ -59,7 +59,7 @@
                     <div class="col s12">
                         <ul class="tabs">
                         <li class="tab"><a href="#" class="active">Profile</a></li>
-                        <li class="tab"><a href="#">Favorited</a></li>
+                        <li class="tab"><a href="#">Favorites</a></li>
                         </ul>
                     </div>    
                 </div>
