--- a/change_password.html
+++ b/change_password.html
@@ -26,6 +26,11 @@
                                 <input id="password" type="password" class="validate"> <label for="password">Password</label>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="password" type="password" class="validate"> <label for="password">confirm Password</label>
+                            </div>
+                        </div>
 
 
                         <div class="card-action center-align">
