--- a/sample.html
+++ b/sample.html
@@ -46,6 +46,7 @@
                             Delicious
                         </div>
                         <p>Posted on 6th October 2018 </p>
+                        <p class="author_name">3 mins read </p>
                         <div class="body">
                             <div class="center">
                                 <img src="./static/img/food.jpg" alt="" srcset="">
@@ -65,7 +66,94 @@
                         </div>
                     </div>
                 </div>
+                <div class="row comments section">
+                    <h2> Comments</h2>
+                    <div class="row">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <i class="material-icons prefix">mode_edit</i>
+                                    <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                                    <label for="icon_prefix2">Add Comment</label>
+                                    <button class="btn waves-effect waves-light right" type="submit" name="action">
+                                        <i class="material-icons right">send</i>
+                                        Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="stories-content" >
+                        <div class="the-story-content">
+                            <div id="user-information">
+                                <div class="user-image">
+                                    <a href="#"><img src="static/img/avatar.png" alt="avatar"></a>
+                                </div>
+                                <div class="user">
+                                    <div id="user-username" >
+                                        <p class="teal-text"> Gloria</p>
+                                    </div>
+                                    <div id="date-created">
+                                        <p>Oct 2</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                            </div>
+                        </div>
+                        <button class="btn waves-effect waves-light " type="submit" name="action">
+                            <i class="material-icons right">send</i>
+                            Reply</button>
+                    </div>
+                    <div id="stories-content" >
+                        <div class="the-story-content">
+                            <div id="user-information">
+                                <div class="user-image">
+                                    <a href="#"><img src="static/img/avatar.png" alt="avatar"></a>
+                                </div>
+                                <div class="user">
+                                    <div id="user-username" >
+                                        <p class="teal-text">Ian</p>
+                                    </div>
+                                    <div id="date-created">
+                                        <p>Oct 2</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                            </div>
+                        </div>
+                        <button class="btn waves-effect waves-light " type="submit" name="action">
+                            <i class="material-icons right">send</i>
+                            Reply</button>
+                    </div>
+                    <div id="stories-content" >
+                        <div class="the-story-content">
+                            <div id="user-information">
+                                <div class="user-image">
+                                    <a href="#"><img src="static/img/avatar.png" alt="avatar"></a>
+                                </div>
+                                <div class="user">
+                                    <div id="user-username" >
+                                        <p class="teal-text"> Kitika</p>
+                                    </div>
+                                    <div id="date-created">
+                                        <p>Oct 2</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn waves-effect waves-light " type="submit" name="action">
+                    <i class="material-icons right">send</i>
+                    Reply</button>
+                </div>
             </div>
+
            
             
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
