--- a/login.html
+++ b/login.html
@@ -12,6 +12,14 @@
 </head>
 
 <body class="teal pattern">
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1&appId=1021611871334229&autoLogAppEvents=1';
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     <div class="container">
         <div class="row">
             <div class="col s12 offset-m2 m8 l6 offset-l3">
@@ -41,6 +49,7 @@
                             <button type="button" onclick="relocate()" class="loginBtn loginBtn--google">
                                 Google
                               </button>
+                              <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="true" data-auto-logout-link="false" data-use-continue-as="true"></div>
                         </div>
                         <p> <a href="forgot_password.html" class="grey-text">Forgot Password?</a></p>
                         <div class="card-action center-align">
