Add follow and unfollow

--- a/profile.html
+++ b/profile.html
@@ -48,8 +48,8 @@
                     <p>Knowledge comes, but wisdon lingers.</p>
                 </div>
                 <div id="following">
-                    <a href="#"><strong style="color:#000;">15</strong> Followers</a>
-                    <a href="#"><strong style="color:#000;">1</strong> Following</a>
+                    <a href="followers.html"><strong style="color:#000;">15</strong> Followers</a>
+                    <a href="friends.html"><strong style="color:#000;">1</strong> Following</a>
                 </div>
             </div>
             
