--- a/sample.html
+++ b/sample.html
@@ -23,13 +23,12 @@
                         <ul class="right">
                             <li><a href="#"><i  class="material-icons">search</i></a></li>
                             <li><a href="#"><i class="material-icons">bookmark_border</i></a></li>
-                            <li><a href="#"><i class="material-icons">notifications_none</i></a></li>
+                            <li><a href="notifications.html"><i class="material-icons">notifications_none</i></a></li>
                             <li><a href="#" class="nav-image"><img src="static/img/avatar.png" alt="avatar"></a></li>
                         </ul>
                     </div>
                 </nav>
             </div>
-
             
             <div class="container white" >
                 <div class="row">
@@ -61,6 +60,8 @@
             
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="/static/js/script.js"></script>
