--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="static/css/style1.css">
-    <title>Followers</title>
+    <title>Following</title>
 </head>
 <body>
         <div class="navbar-fixed">
@@ -28,7 +28,7 @@
                 </nav>
             </div>
     <main>
-            <h2>Find Friends</h2>
+            <h2>Following</h2>
             <!-- <div class="profile-container">
                 <div class="user-data1">
                     <div class="user-image">
