--- a/profile1.html
+++ b/profile1.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="static/css/style1.css">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Ramon | Author's Haven</title>
+        <title>Alex | Author's Haven</title>
     </head>
 
     <body>
