--- a/profile.html
+++ b/profile.html
@@ -91,7 +91,7 @@
                         <p>#Ease</p>
                     </div>
                     <div id="content">
-                        <p>Getting married is like getting on a rollercoaster.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English...<a href="#">Read more &raquo;</a></p>
+                        <p>Getting married is like getting on a rollercoaster.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English...<a href="sample.html">Read more &raquo;</a></p>
                     </div>
                     <div class="interaction">
                         <div id="likes">
@@ -127,7 +127,7 @@
                         <p>I Am That Guy</p>
                     </div>
                     <div id="content">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1300s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s...<a href="#">Read more &raquo;</a></p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1300s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s...<a href="sample.html">Read more &raquo;</a></p>
                     </div>
                     <div class="interaction">
                             <div id="likes">
@@ -162,7 +162,7 @@
                         <p>Two Plus Two is Four</p>
                     </div>
                     <div id="content">
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Getting married is like getting on a rollercoaster...<a href="#">Read more &raquo;</a></p>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Getting married is like getting on a rollercoaster...<a href="sample.html">Read more &raquo;</a></p>
                     </div>
                     <div class="interaction">
                         <div id="likes">
