--- a/profile.html
+++ b/profile.html
@@ -95,10 +95,10 @@
                     </div>
                     <div class="interaction">
                         <div id="likes">
-                            <a href="#"><i  class="material-icons">thumb_up</i></a>
-                            <a href="#" id="thumb-up-likes">5</a>
-                            <a href="#"><i  class="material-icons">thumb_down</i></a>
-                            <a href="#" id="thumb-down-dislikes">2</a> 
+                            <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
+                            <a href="#" id="thumb-up-like"></a>
+                            <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
+                            <a href="#" id="thumb-down-dislike"></a> 
                         </div>
                         <div id="responses">
                             <a href="#">10 comments</a>
@@ -131,10 +131,10 @@
                     </div>
                     <div class="interaction">
                             <div id="likes">
-                                <a href="#"><i  class="material-icons">thumb_up</i></a>
-                                <a href="#" id="thumb-up-likes">5</a>
-                                <a href="#"><i  class="material-icons">thumb_down</i></a>
-                                <a href="#" id="thumb-down-dislikes">25</a> 
+                                <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
+                                <a href="#" id="thumb-up-like"></a>
+                                <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
+                                <a href="#" id="thumb-down-dislike"></a> 
                             </div>
                             <div id="responses">
                                 <a href="#">5 comments</a>
@@ -166,10 +166,10 @@
                     </div>
                     <div class="interaction">
                         <div id="likes">
-                            <a href="#"><i  class="material-icons">thumb_up</i></a>
-                            <a href="#" id="thumb-up-likes">15</a>
-                            <a href="#"><i  class="material-icons">thumb_down</i></a>
-                            <a href="#" id="thumb-down-dislikes">2</a> 
+                            <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
+                            <a href="#" id="thumb-up-like"></a>
+                            <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
+                            <a href="#" id="thumb-down-dislike"></a> 
                         </div>
                         <div id="responses">
                             <a href="#">0 comments</a>
@@ -182,6 +182,7 @@
         </div>
             
         <!-- Compiled and minified JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="static/js/script.js"></script>
     </body>
