--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-
+    <meta name="google-signin-client_id" content="266520652058-jvvihqpsg2oj8plo61m42p0i6cknppfs.apps.googleusercontent.com
+    .apps.googleusercontent.com">
     <title>Test</title><!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="css/ed-style.css" type="text/css">
@@ -62,7 +63,8 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"> </script>
-    <script charset="utf-8" type="text/javascript">
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+   <script charset="utf-8" type="text/javascript">
         function submit() {
             var fields = [
                 'username',
@@ -82,6 +84,7 @@
             window.location.replace("profile.html");
         }
     </script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 
 </html>
