--- a/sample.html
+++ b/sample.html
@@ -71,7 +71,7 @@
                             <p>
                                 Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Ultricies leo integer malesuada nunc vel risus commodo viverra. Quam viverra orci sagittis eu volutpat odio. Tellus mauris a diam maecenas sed. At lectus urna duis convallis convallis tellus id interdum velit. Semper viverra nam libero justo. Est ante in nibh mauris cursus mattis molestie a iaculis. Sed arcu non odio euismod lacinia at quis. Volutpat ac tincidunt vitae semper quis lectus nulla at. Varius quam quisque id diam vel quam. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Neque egestas congue quisque egestas diam in arcu cursus. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum. Dignissim suspendisse in est ante in nibh. Sapien faucibus et molestie ac. Mauris vitae ultricies leo integer malesuada nunc vel. Egestas fringilla phasellus faucibus scelerisque eleifend. Ac tincidunt vitae semper quis lectus. Elit sed vulputate mi sit amet mauris commodo quis imperdiet. Nibh tellus molestie nunc non blandit.
                             </p>
-                        </div>
+                        </div id="share_buttons">
                         <a href="http://www.facebook.com/sharer.php?u=https://james-chege.github.io/authors-heaven/sample.html" target="_blank">
                             <img src="https://simplesharebuttons.com/images/somacro/facebook.png" width="50" alt="Facebook" />
                         </a>
