--- a/login.html
+++ b/login.html
@@ -47,9 +47,7 @@
                             <button  type="button" onclick="relocate()" class="loginBtn loginBtn--facebook">
                                 Facebook
                             </button>
-                            <button type="button" onclick="relocate()" class="loginBtn loginBtn--google">
-                                Google
-                              </button>
+                              <div class="g-signin2" data-onsuccess="onSignIn">google</div>
                         </div>
                         <p> <a href="forgot_password.html" class="grey-text">Forgot Password?</a></p>
                         <div class="card-action center-align">
@@ -63,7 +61,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"> </script>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
    <script charset="utf-8" type="text/javascript">
         function submit() {
             var fields = [
