--- a/login.html
+++ b/login.html
@@ -108,7 +108,7 @@
   },
   // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
   signInFlow: 'popup',
-  signInSuccessUrl: 'https://james-chege.github.io/authors-heaven/login.html#',
+  signInSuccessUrl: 'https://james-chege.github.io/authors-heaven/profile.html#',
   signInOptions: [
     // Leave the lines as is for the providers you want to offer your users.
     firebase.auth.GoogleAuthProvider.PROVIDER_ID,
