Refactor mock ups to reset password

--- a/change_password.html
+++ b/change_password.html
@@ -56,7 +56,7 @@
                     return;
                 }
             }
-            window.location.replace('forgot_password.html');
+            window.location.replace('success_password.html');
         }
     </script>
 </body>
