--- a/forgot_password.html
+++ b/forgot_password.html
@@ -38,7 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"> </script>
     <script charset="utf-8" type="text/javascript">
         function submit() {
-            window.location.replace('change_password.html');
+            window.location.replace('send_reset_email.html');
         }
 
     </script>
