redirect to login on password change

--- a/change_password.html
+++ b/change_password.html
@@ -45,18 +45,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"> </script>
     <script charset="utf-8" type="text/javascript">
         function submit() {
-            var fields = [
-                'password',
-                'email',
-                'confirm_password'
-            ];
-            for (let value of fields) {
-                if ($(`#${value}`).val().trim() == "") {
-                    $(`#${value}_label`).css('display', 'block')
-                    return;
-                }
-            }
-            window.location.replace('success_password.html');
+            window.location.replace("success_password.html");
         }
     </script>
 </body>
