--- a/change_password.html
+++ b/change_password.html
@@ -34,7 +34,7 @@
 
 
                         <div class="card-action center-align">
-                            <a onclick="submit()" class="waves-effect btn">Change password</a>
+                            <a href="success_password.html" onclick="submit()" class="waves-effect btn">Change password</a>
                         </div>
                     </div>
                 </form>
