--- a/login.html
+++ b/login.html
@@ -12,17 +12,17 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
     <script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAtQlgYmZxtvighcpfPr7PAi14tq7P68Cw",
-    authDomain: "authors-haven-ba358.firebaseapp.com",
-    databaseURL: "https://authors-haven-ba358.firebaseio.com",
-    projectId: "authors-haven-ba358",
-    storageBucket: "",
-    messagingSenderId: "254944267573"
-  };
-  firebase.initializeApp(config);
-</script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyAtQlgYmZxtvighcpfPr7PAi14tq7P68Cw",
+            authDomain: "authors-haven-ba358.firebaseapp.com",
+            databaseURL: "https://authors-haven-ba358.firebaseio.com",
+            projectId: "authors-haven-ba358",
+            storageBucket: "",
+            messagingSenderId: "254944267573"
+        };
+        firebase.initializeApp(config);
+    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="css/ed-style.css" type="text/css">
 </head>
@@ -53,13 +53,14 @@
                         <!-- <h1>Welcome to My Awesome App</h1> -->
                         <div id="firebaseui-auth-container"></div>
                         <div id="loader">Loading...</div>
-                        <p> <a href="forgot_password.html" class="grey-text">Forgot Password?</a></p>
                         <div class="card-action center-align">
                             <a onclick="submit()" class="waves-effect btn">Sign In</a>
                         </div>
                     </div>
                 </form>
-                <p class="center-align"> <a href="forgot_password.html" class="white-text">Create Account?</a></p>
+                <p class="center-align"> <a href="forgot_password.html" class="white-text">Forgot Password?</a><br>
+                    <a href="forgot_password.html" class="white-text">Sign up</a>
+                </p>
             </div>
         </div>
     </div>
@@ -67,7 +68,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"> </script>
-   <script charset="utf-8" type="text/javascript">
+    <script charset="utf-8" type="text/javascript">
         function submit() {
             var fields = [
                 'username',
@@ -90,41 +91,41 @@
     <!--firebase-->
     <script>
 
-    var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
 
         var uiConfig = {
-  callbacks: {
-    signInSuccessWithAuthResult: function(authResult, redirectUrl) {
-      // User successfully signed in.
-      // Return type determines whether we continue the redirect automatically
-      // or whether we leave that to developer to handle.
-      return true;
-    },
-    uiShown: function() {
-      // The widget is rendered.
-      // Hide the loader.
-      document.getElementById('loader').style.display = 'none';
-    }
-  },
-  // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
-  signInFlow: 'popup',
-  signInSuccessUrl: 'https://james-chege.github.io/authors-heaven/profile.html#',
-  signInOptions: [
-    // Leave the lines as is for the providers you want to offer your users.
-    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-    firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-    firebase.auth.TwitterAuthProvider.PROVIDER_ID,
-    firebase.auth.GithubAuthProvider.PROVIDER_ID,
-    // firebase.auth.EmailAuthProvider.PROVIDER_ID,
-    // firebase.auth.PhoneAuthProvider.PROVIDER_ID
-  ],
-  // Terms of service url.
-  tosUrl: 'https://james-chege.github.io/authors-heaven/login.html#',
-  // Privacy policy url.
-  privacyPolicyUrl: '<your-privacy-policy-url>'
-};
+            callbacks: {
+                signInSuccessWithAuthResult: function (authResult, redirectUrl) {
+                    // User successfully signed in.
+                    // Return type determines whether we continue the redirect automatically
+                    // or whether we leave that to developer to handle.
+                    return true;
+                },
+                uiShown: function () {
+                    // The widget is rendered.
+                    // Hide the loader.
+                    document.getElementById('loader').style.display = 'none';
+                }
+            },
+            // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+            signInFlow: 'popup',
+            signInSuccessUrl: 'https://james-chege.github.io/authors-heaven/profile.html#',
+            signInOptions: [
+                // Leave the lines as is for the providers you want to offer your users.
+                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+                firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+                firebase.auth.GithubAuthProvider.PROVIDER_ID,
+                // firebase.auth.EmailAuthProvider.PROVIDER_ID,
+                // firebase.auth.PhoneAuthProvider.PROVIDER_ID
+            ],
+            // Terms of service url.
+            tosUrl: 'https://james-chege.github.io/authors-heaven/login.html#',
+            // Privacy policy url.
+            privacyPolicyUrl: '<your-privacy-policy-url>'
+        };
 
-ui.start('#firebaseui-auth-container', uiConfig);
+        ui.start('#firebaseui-auth-container', uiConfig);
     </script>
 </body>
 
